--- a/index.html
+++ b/index.html
@@ -30,18 +30,17 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
+        <h1>Matthew Blushtein</h1>
         <h2>Freshman in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a freshman at Bob Jones University studying computer science.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. My favorite website is  
+            I attend Faith Baptist Church in Taylors SC. My favorite website is  
             <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            <a href="mailto:mblus960@bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy listening to music and playing basketball.
          </p>
         <h3>EDUCATION</h3>
         Computer Science<br />
